--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.3.0",
     "react": "18.2.0",
